--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,26 @@
-<h1>USERS</h1>
+<h1 class = "text-center mb-3">{{title}}</h1>
+
+<form action="/api/users" method="POST" class="mb-3">
+<div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" name="name" class="form-control">
+</div>
+
+<div class="form-group">
+    <label for="name">Email</label>
+    <input type="text" name="email" class="form-control">
+</div>
+
+<input type="submit" value="Add a User" class="btn btn-primary btn-block">
+</form>
+
+
+<h4 class = "text-center mb-4">Users</h4>
+
+<ol class='list-group'>
+    {{#each users}}
+    <li class='list-group-item'>{{this.name}}:{{this.email}}</li>
+    {{/each}}
+
+</ol>
+
